# triangle-counting

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  csv.r  csv.sh  tr_count_incidence.c
src/: arb_ord.rs  incidence.rs  lib.rs  main.rs  utils.rs
