[package]
name = "triangle-counting"
version = "0.1.0"
edition = "2021"
authors = ["Davide Peressoni"]
license = "MIT"
description = "Implementation of Buriol, Luciana S., et al. \"Counting triangles in data streams.\" Proceedings of the twenty-fifth ACM SIGMOD-SIGACT-SIGART symposium on Principles of database systems. 2006."
repository = "https://gitlab.com/DPDmancul/triangle-counting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

